--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
 
     
     <script src="./script.js"></script>
+
+    
+    <div id="social-icons">
+        <!-- <a href="https://www.linkedin.com/in/siddharth189/">linkedin</a> -->
+        <a href="https://www.linkedin.com/in/siddharth189/"><img src="./images/linkedin.png" alt="in" srcset=""></a>
+        <a href="https://github.com/Siddharth189"><img src="./images/github.png" alt="github" srcset=""></a>
+
+    </div>
 </body>
 </html>
